# STARK-PLACE

./: .gitignore  README.md  pyproject.toml
stark_place/commands/: __init__.py  general_manager.py
stark_place/examples/: context.py  custom_run.py  hello_world.py  keyboard_trigger.py  porcupine_wakeword_trigger.py
stark_place/notifications/: sound.py
stark_place/triggers/: keyboard_key.py  porcupine.py
